--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ article.poppetje1 p {
 }
 
 article.poppetje2 {
-    background-image: url(content/poppetjes_Tekengebied\ 1\ kopie\ 2.png);
+    background-image: url(content/poppetjes2.png);
     width: 100vw;
     height: 100vh;
     background-size: cover;
@@ -233,7 +233,7 @@ footer section h5 {
 
 img {
     width: 100vw;
-    padding-top: 0, 5em;
+    padding-top: 1em;
 }
 
 @keyframes back {
