--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav {
     width: 100%;
     align-items: center;
     flex-wrap: wrap;
-    padding: 5px 0;
+    padding: 1vh 0;
     background-color: #3E5958;
 }
 
@@ -77,14 +77,14 @@ section.eerstepagina p {
 section.tweedepagina {
     background-image: linear-gradient(rgba(255, 255, 255, 0.55), transparent), url(content/paspop.jpg);
     width: 100vw;
-    height: 87vh;
+    height: 84vh;
     background-size: cover;
 }
 
 section.derdepagina {
     background-image: linear-gradient(rgba(255, 255, 255, 0.55), transparent), url(content/muur.jpg);
     width: 100vw;
-    height: 86vh;
+    height: 84vh;
     background-size: cover;
 }
 
@@ -175,7 +175,7 @@ article.text h4 {
 article.text h1 {
     font-size: 50pt;
     color: transparent;
-    -webkit-text-stroke: 2px #3E5958;
+    -webkit-text-stroke: 1vw #3E5958;
     background: url(content/back.png);
     background-clip: text;
     background-position: 0 0;
